rain_pred added

--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
             <img class="proj-img" src="projects/spirit_level/proj.png" alt="project-image">
             <div class="proj documentation">
                 
-                <p class="description"><b class="heading">I made an electric spirit level using the MSP432</b>
+                <p class="description"><b class="heading">I designed an electric spirit level using the MSP432</b>
                     For my embedded systems and programming course, I used the MS432 development
                     board and an accelerometer to make an electronic spirit level, which could
                     tell the level of straightness of a surface with very little error. A battery powered
                     spirit level that fits in a pocket in my opinion would be very handy and useful. It
                     is economic and simply takes less space than the mechanical ones we are all
-                    used to. The cose can be found <a class="here" target = "_blank" href="https://github.com/jerimiel/MSP432_spirit_level/tree/master">here</a> in my github repo.
+                    used to. The code can be found <a class="here" target = "_blank" href="https://github.com/jerimiel/MSP432_spirit_level/tree/master">here</a> in my github repo.
                 </p>
             </div>
         </a>
@@ -185,6 +185,20 @@
                     Finite element analysis helps us to model structures and phenomenon that might
                     be too expensive or simply impossible to test out. I wrote, thealgorithm which was used in testing
                     the effects on applying different forces on different structures including the eiffel tower.
+                </p>
+            </div>
+        </a>
+
+        <a class="targ-proj" target="_blank">
+            <img class="proj-img" src="projects/rain_pred/proj.png" alt="project-image">
+            <div class="proj documentation">
+                
+                <p class="description">The idea behind the project was to be able to allow a 
+                    microcontroller make decisions such as informing home occupants or controlling servos to close
+                     windows when there was rainfall. Temperature and humidity readings were collected over a period 
+                     using the DHT22 sensor, cleaned up trained (with an f1_score of 96.6), and deployed on an ESP8266
+                      wemos D1 microcontroller.
+                     The code can be found <a class="here" target = "_blank" href="https://github.com/jerimiel/esp8266_rain_prediction">here</a> in my github repo.
                 </p>
             </div>
         </a>
