made some changes to rain proj writeup

--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
                 <p class="description">The idea behind the project was to be able to allow a 
                     microcontroller make decisions such as informing home occupants or controlling servos to close
                      windows when there was rainfall. Temperature and humidity readings were collected over a period 
-                     using the DHT22 sensor, cleaned up trained (with an f1_score of 96.6), and deployed on an ESP8266
+                     using the DHT22 sensor and an ESP8266 microcontroller, sent to the thingspeak platform, cleaned 
+                     up and a model was trained (with an f1_score of 96.6), and deployed on an ESP8266
                       wemos D1 microcontroller.
                      The code can be found <a class="here" target = "_blank" href="https://github.com/jerimiel/esp8266_rain_prediction">here</a> in my github repo.
                 </p>
