--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <section id="resume">
         <div id="education">
             <h3 class="intro second">Education</h3>
-            <span class="separator"><h5 class="first">Eth Zurich</h5><h5 class="first">2024 - 2026</h5></span>
+            <span class="separator"><h5 class="first">Eth Zurich</h5><h5 class="first">2024</h5></span>
             <h5 class="below">Master of Advanced Studies - Mechatronics, Robotics and Automation Engineering</h5>
 
-            <span class="separator"><h5 class="first">Ashesi University</h5><h5 class="first">2024 - 2026</h5></span>
+            <span class="separator"><h5 class="first">Ashesi University</h5><h5 class="first">2025 - 2026</h5></span>
             <h5 class="below">Master of Science - Mechatronics, Robotics and Automation Engineering</h5>
 
             <span class="separator"><h5 class="first">UBA</h5><h5 class="first">2023</h5></span>
@@ -142,7 +142,10 @@
             <span class="separator"><h5 class="first">Matlab</h5><h5 class="first"></h5></span>
             <span class="separator"><h5 class="first">C programming</h5><h5 class="first"></h5></span>
             <span class="separator"><h5 class="first">Machine Learning</h5><h5 class="first"></h5></span>
+            <span class="separator"><h5 class="first">Web Dev</h5><h5 class="first"></h5></span>
             <span class="separator"><h5 class="first">Embedded Systems Programming</h5><h5 class="first"></h5></span>
+            <span class="separator"><h5 class="first">STM32 Microcontroller programming</h5><h5 class="first"></h5></span>
+            <span class="separator"><h5 class="first">STM32 Board Design</h5><h5 class="first"></h5></span>
 
             
         </div>
@@ -153,6 +156,9 @@
             <span class="separator"><h5 class="first">Fusion360</h5><h5 class="first"></h5></span>
             <span class="separator"><h5 class="first">Arduino IDE</h5><h5 class="first"></h5></span>
             <span class="separator"><h5 class="first">Ansys Granta</h5><h5 class="first"></h5></span>
+            <span class="separator"><h5 class="first">STM32 CUBE IDE</h5><h5 class="first"></h5></span>
+            <span class="separator"><h5 class="first">KICAD</h5><h5 class="first"></h5></span>
+
 
             
         </div>
