small-skill changes

--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
             <span class="separator"><h5 class="first">Machine Learning</h5><h5 class="first"></h5></span>
             <span class="separator"><h5 class="first">Web Dev</h5><h5 class="first"></h5></span>
             <span class="separator"><h5 class="first">Embedded Systems Programming</h5><h5 class="first"></h5></span>
-            <span class="separator"><h5 class="first">STM32 Microcontroller programming</h5><h5 class="first"></h5></span>
-            <span class="separator"><h5 class="first">STM32 Board Design</h5><h5 class="first"></h5></span>
+            <span class="separator"><h5 class="first">KICAD MCU design</h5><h5 class="first"></h5></span>
 
             
         </div>
@@ -154,8 +153,8 @@
             <h3 class="intro second">Technologies</h3>
 
             <span class="separator"><h5 class="first">Fusion360</h5><h5 class="first"></h5></span>
-            <span class="separator"><h5 class="first">Arduino IDE</h5><h5 class="first"></h5></span>
             <span class="separator"><h5 class="first">Ansys Granta</h5><h5 class="first"></h5></span>
+            <span class="separator"><h5 class="first">Arduino IDE</h5><h5 class="first"></h5></span>
             <span class="separator"><h5 class="first">STM32 CUBE IDE</h5><h5 class="first"></h5></span>
             <span class="separator"><h5 class="first">KICAD</h5><h5 class="first"></h5></span>
 
