--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <img class="proj-img" src="projects/spirit_level/proj.png" alt="project-image">
             <div class="proj documentation">
                 
-                <p class="description"><b class="heading">I designed an electric spirit level using the MSP432</b>
+                <p class="description"><b class="heading">Designed an electric spirit level using the MSP432</b>
                     For my embedded systems and programming course, I used the MS432 development
                     board and an accelerometer to make an electronic spirit level, which could
                     tell the level of straightness of a surface with very little error. A battery powered
@@ -198,7 +198,7 @@
             <img class="proj-img" src="projects/rain_pred/proj.png" alt="project-image">
             <div class="proj documentation">
                 
-                <p class="description">The idea behind the project was to be able to allow a 
+                <p class="description"><b class="heading">Trained a model that was deployed on a microcontroller.</b>The idea behind the project was to be able to allow a 
                     microcontroller make decisions such as informing home occupants or controlling servos to close
                      windows when there was rainfall. Temperature and humidity readings were collected over a period 
                      using the DHT22 sensor and an ESP8266 microcontroller, sent to the thingspeak platform, cleaned 
