date change in education

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <section id="resume">
         <div id="education">
             <h3 class="intro second">Education</h3>
-            <span class="separator"><h5 class="first">Eth Zurich</h5><h5 class="first">2024</h5></span>
+            <span class="separator"><h5 class="first">Eth Zurich</h5><h5 class="first">2024 - 2026</h5></span>
             <h5 class="below">Master of Advanced Studies - Mechatronics, Robotics and Automation Engineering</h5>
 
-            <span class="separator"><h5 class="first">Ashesi University</h5><h5 class="first">2025 - 2026</h5></span>
+            <span class="separator"><h5 class="first">Ashesi University</h5><h5 class="first">2024 - 2026</h5></span>
             <h5 class="below">Master of Science - Mechatronics, Robotics and Automation Engineering</h5>
 
             <span class="separator"><h5 class="first">UBA</h5><h5 class="first">2023</h5></span>
